--- a/Site/dashboard.html
+++ b/Site/dashboard.html
@@ -10,9 +10,34 @@
     <div class="container">
         <h1>Выберите операцию</h1>
         <div class="tiles">
-            <div class="tile" onclick="replenish()">Пополнение</div>
-            <div class="tile" onclick="transfer()">Перевод</div>
-            <div class="tile" onclick="withdraw()">Снятие</div>
+            <div class="tile" id="replenish-tile">
+                <div class="tile-header" onclick="toggleTile('replenish-tile')">Пополнение</div>
+                <div class="tile-content">
+                    <form id="replenish-form" onsubmit="handleReplenish(event)">
+                        <input type="number" name="amount" placeholder="Сумма" required min="0" step="0.01">
+                        <button type="submit">Подтвердить</button>
+                    </form>
+                </div>
+            </div>
+            <div class="tile" id="transfer-tile">
+                <div class="tile-header" onclick="toggleTile('transfer-tile')">Перевод</div>
+                <div class="tile-content">
+                    <form id="transfer-form" onsubmit="handleTransfer(event)">
+                        <input type="text" name="recipientId" placeholder="ID получателя" required>
+                        <input type="number" name="amount" placeholder="Сумма" required min="0" step="0.01">
+                        <button type="submit">Подтвердить</button>
+                    </form>
+                </div>
+            </div>
+            <div class="tile" id="withdraw-tile">
+                <div class="tile-header" onclick="toggleTile('withdraw-tile')">Снятие</div>
+                <div class="tile-content">
+                    <form id="withdraw-form" onsubmit="handleWithdraw(event)">
+                        <input type="number" name="amount" placeholder="Сумма" required min="0" step="0.01">
+                        <button type="submit">Подтвердить</button>
+                    </form>
+                </div>
+            </div>
         </div>
     </div>
     <script src="js/transactions.js"></script>
