--- a/Site/index.html
+++ b/Site/index.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
-    <div class="container">
+    <div class="container login">
         <h1>Вход в аккаунт</h1>
         <input type="text" id="login-id" placeholder="Введите ваш ID">
         <input type="password" id="login-password" placeholder="Введите пароль">
