--- a/Site/index.html
+++ b/Site/index.html
@@ -12,6 +12,7 @@
         <input type="text" id="login-id" placeholder="Введите ваш ID">
         <input type="password" id="login-password" placeholder="Введите пароль">
         <button onclick="login()">Войти</button>
+        <a href="register.html" class="register-link">Не зарегистрированы?</a>
     </div>
     <script src="js/auth.js"></script>
 </body>
