--- a/Site/dashboard.html
+++ b/Site/dashboard.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
-    <div class="container">
+    <div class="container login dashboard">
         <h1>Выберите операцию</h1>
         <div class="tiles">
             <div class="tile" id="replenish-tile">
