--- a/Site/dashboard.html
+++ b/Site/dashboard.html
@@ -8,6 +8,10 @@
 </head>
 <body>
     <div class="container login dashboard">
+        <div class="user-info">
+            <div class="info-item">ID: <span id="user-id"></span></div>
+            <div class="info-item">Баланс: <span id="user-balance"></span> ₴</div>
+        </div>
         <h1>Выберите операцию</h1>
         <div class="tiles">
             <div class="tile" id="replenish-tile">
