--- a/Site/register.html
+++ b/Site/register.html
@@ -8,11 +8,13 @@
 </head>
 <body>
     <div class="container login">
+        <div class="logo-container">
+            <img src="images/logo.png" alt="Tele Bank Logo" class="logo">
+        </div>
         <h1>Регистрация</h1>
         <div class="registration-content">
             <img src="images/qr-code.png" alt="QR код для регистрации" class="qr-code">
             <a href="https://t.me/banksystemtelegtambot" class="telegram-button">
-               
                 Открыть в Telegram
             </a>
         </div>
