--- a/Site/index.html
+++ b/Site/index.html
@@ -8,6 +8,9 @@
 </head>
 <body>
     <div class="container login">
+        <div class="logo-container">
+            <img src="images/logo.png" alt="Tele Bank Logo" class="logo">
+        </div>
         <h1>Вход в аккаунт</h1>
         <input type="text" id="login-id" placeholder="Введите ваш ID">
         <input type="password" id="login-password" placeholder="Введите пароль">
