--- a/Site/index.html
+++ b/Site/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Вход</title>
+    <title>Sign</title>
     <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
@@ -11,11 +11,11 @@
         <div class="logo-container">
             <img src="images/logo.png" alt="Tele Bank Logo" class="logo">
         </div>
-        <h1>Вход в аккаунт</h1>
+        <h1>Login to your account</h1>
         <input type="text" id="login-id" placeholder="Введите ваш ID">
         <input type="password" id="login-password" placeholder="Введите пароль">
-        <button onclick="login()">Войти</button>
-        <a href="register.html" class="register-link">Не зарегистрированы?</a>
+        <button onclick="login()">Sign</button>
+        <a href="register.html" class="register-link">Not registered?</a>
     </div>
     <script src="js/auth.js"></script>
 </body>
