--- a/Site/register.html
+++ b/Site/register.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Регистрация</title>
+    <title>Registration</title>
     <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
@@ -11,11 +11,11 @@
         <div class="logo-container">
             <img src="images/logo.png" alt="Tele Bank Logo" class="logo">
         </div>
-        <h1>Регистрация</h1>
+        <h1>Registration</h1>
         <div class="registration-content">
-            <img src="images/qr-code.png" alt="QR код для регистрации" class="qr-code">
+            <img src="images/qr-code.png" alt="QR code for registration" class="qr-code">
             <a href="https://t.me/banksystemtelegtambot" class="telegram-button">
-                Открыть в Telegram
+                Open in Telegram
             </a>
         </div>
     </div>
